# FEWS_RORB_Adapter

./: .gitignore  README.md  post_adapter_talbingo.py  post_adapter_talbingo.spec  pre_adapter_talbingo.py  pre_adapter_talbingo.spec  pyproject.toml  setup.py
docs/: architecture.md
examples/from_rorb/: Gauge_Flow.xml
examples/model/: Gated_dam_Blowering Dam_Data.csv  Gated_dam_Happy Jacks Pondage_Data.csv  Gated_dam_Jounama_Pondage_Data.csv  Gated_dam_Talbingo Reservoir_Data.csv  Gated_dam_Tumut 2 Pondage_Data.csv  Gated_dam_Tumut Dam Pondage_Data.csv  RORB_CMD.par  RUN_RORB.bat  Rainfall.stm  Talbingo_with_Blowering_Rainfall.out
examples/model/templates/: Template_RORB_CMD.par
examples/talbingo_rog_local-rog/FromFews/: Parameters.xml  Transfer.nc
examples/talbingo_rog_local-rog/model/: runRorbAdapter.bat  runRorbPostAdapter_outsideFEWS.bat  runRorbPreAdapter_fromFEWS.bat  runRorbPreAdapter_outsideFEWS.bat  runRorb_outsideFEWS.bat
examples/talbingo_rog_local-rog/to_rorb/: input_meteo.xml  input_operation.xml  runinfo.xml
examples/to_rorb/: input_hydrograph.nc  input_hydrograph.xml  input_meteo.nc  input_operation.nc  input_rain.nc  input_state.nc  input_state.xml  input_transfer.xml  params.xml  runinfo.xml
examples/to_rorb/SS/: Outflow.txt  input_hydrograph.csv  input_operation.csv  station_id.csv
src/: __init__.py  fews_config.json  file_mapping.json  input_compiler.py  out_processing.py  post_adapter.py  pre_adapter.py  rorb_config.json  rorb_formatter.py  utils.py
tests/: template_runinfo.xml  test_full_model_run.py
(+5 files in other folders)
