[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fews_rorb_adapter"
version = "0.0.1"
description = "Tooling"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Yanni Wang", email = "yanni.wangh@harc.com.au" },
]
maintainers = [
  { name = "Yanni Wang", email = "yanni.wangh@harc.com.au" },
]
dependencies = [
  "pandas==2.2.3",
  "numpy==2.0.2",
  "lxml==5.3.0",
  "netCDF4==1.7.2",
  "packaging==24.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pyinstaller",
]

[project.urls]
Homepage = "https://github.com/H-A-R-C/FEWS_RORB_Adapter"
"Source Code" = "https://github.com/H-A-R-C/FEWS_RORB_Adapter.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.setuptools.package-data]
"src" = [
  "rorb_config.json",
  "fews_config.json",
  "file_mapping.json",
]

[tool.uv]
dev-dependencies = [
  "pytest",
  "pyinstaller",
]
